src/objects/Framework__Spark_Plug_Extension__mdt.object
<CustomObject>
    <description>Spark Plug Extensions allow arbitrary screens to be added to specific Fonteva workflows.</description>
    <fields>
        <fullName>Framework__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is extension point enabled or not.</description>
        <inlineHelpText>Is extension point enabled or not.</inlineHelpText>
        <label>Extension Point enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__Lightning_Component__c</fullName>
        <description>Aura component to display in the spark plug interface.</description>
        <inlineHelpText>Aura component to display in the spark plug interface.</inlineHelpText>
        <label>Lightning Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of extension if there are multiple for this extension point.</description>
        <inlineHelpText>Order of extension if there are multiple for this extension point.</inlineHelpText>
        <label>Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Framework__Spark_Plug_Extension_Point__c</fullName>
        <description>Extension point that needs to be implemented.</description>
        <inlineHelpText>Extension point that needs to be implemented.</inlineHelpText>
        <label>Spark Plug Extension Point</label>
        <referenceTo>Framework__Spark_Plug_Extension_Point__mdt</referenceTo>
        <relationshipLabel>SparkPlug Extension Point</relationshipLabel>
        <relationshipName>Spark_Plug_Extension_Point</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Spark Plug Extension</label>
    <pluralLabel>Spark Plug Extensions</pluralLabel>
</CustomObject>